--- a/app/src/main/res/layout/activity_training_details.xml
+++ b/app/src/main/res/layout/activity_training_details.xml
@@ -77,6 +77,10 @@
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="32dp"
+        android:longClickable="false"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
@@ -107,6 +111,10 @@
         android:drawableStart="@drawable/ic_replay_black"
         android:inputType="text"
         android:layout_marginBottom="8dp"
+        android:longClickable="false"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         app:layout_constraintBottom_toTopOf="@+id/tvTotaalGewicht"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -139,6 +147,10 @@
         android:ems="10"
         android:inputType="text"
         android:layout_marginLeft="8dp"
+        android:longClickable="false"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -147,6 +159,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/tvTotaalAantalHerhalingen" />
-
 
 </android.support.constraint.ConstraintLayout>
