--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="DatePickerTheme" parent="Theme.AppCompat.Light.Dialog">
-        <item name="colorAccent">#3F51B5</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
     </style>
 
 </resources>
